--- a/.classpath
+++ b/.classpath
@@ -2,13 +2,6 @@
 <classpath>
 	<classpathentry kind="src" path="src"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.7"/>
-	<classpathentry kind="lib" path="D:/Applications/Libraries/commons-exec-1.1/commons-exec-1.1.jar"/>
-	<classpathentry kind="lib" path="D:/Applications/Libraries/commons-exec-1.1/commons-exec-1.1-javadoc.jar"/>
-	<classpathentry kind="lib" path="D:/Applications/Libraries/commons-exec-1.1/commons-exec-1.1-sources.jar"/>
-	<classpathentry kind="lib" path="D:/Applications/Libraries/commons-io-2.4/commons-io-2.4.jar"/>
-	<classpathentry kind="lib" path="D:/Applications/Libraries/commons-io-2.4/commons-io-2.4-javadoc.jar"/>
-	<classpathentry kind="lib" path="D:/Applications/Libraries/commons-io-2.4/commons-io-2.4-sources.jar"/>
-	<classpathentry kind="lib" path="D:/Applications/Libraries/commons-io-2.4/commons-io-2.4-tests.jar"/>
-	<classpathentry kind="lib" path="D:/Applications/Libraries/commons-io-2.4/commons-io-2.4-test-sources.jar"/>
+	<classpathentry kind="lib" path="Y:/Projects/Bliss-Version-Switcher/libs/commons-io-2.4.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
